chore: rm logo.com

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <!-- HTML Meta Tags --> 
-      <title>FRONTIER X | LOGO.com</title>
+      <title>Frontier X</title>
       <meta name="description" content="Originality at its finest" />
       <meta name="keywords" content="Frontier X" />
       <!-- Google / Search Engine Tags --> 
