chore: update instagram

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
          <section class="section">
             <ul class="social-icon-list filled">
                <li class="social-icon-list-item">
-                  <a href="https://www.instagram.com/Frontier-X" target="_blank" rel="noopener noreferrer">
+                  <a href="https://www.instagram.com/FrontierX_Lab" target="_blank" rel="noopener noreferrer">
                      <div class="icon">
                         <div class="icon-wrapper">
                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" fill="currentColor">
