--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <!-- HTML Meta Tags --> 
       <title>Frontier X</title>
+      <link rel="icon" type="image/x-icon" href="./favicon.ico">
       <meta name="description" content="Originality at its finest" />
       <meta name="keywords" content="Frontier X" />
       <!-- Google / Search Engine Tags --> 
