style: change favicon and logo

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <!-- HTML Meta Tags --> 
       <title>Frontier X</title>
-      <link rel="icon" type="image/x-icon" href="./favicon.ico">
+      <link rel="icon" type="image/x-icon" href="./favicon.png">
       <meta name="description" content="Originality at its finest" />
       <meta name="keywords" content="Frontier X" />
       <!-- Google / Search Engine Tags --> 
@@ -38,7 +38,7 @@
            <a href="#about">About</a>
          </div>
          <header class="header">
-            <img class="header-logo" src="./logo_89a06c995209b6d8af7ef610590785b2d0c10a5b3b4f5f803fbb6529a751c8e1.png" alt="Logo" > 
+            <img class="header-logo" src="./picture3.png" alt="Logo" > 
             <div class="header-text">
                <!--
                <h1 class="title">FRONTIER X</h1>
