refactor: update discord link

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <!-- <li><a class="nav-link   scrollto" href="#portfolio">Portfolio</a></li> -->
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
-          <li><a class="getstarted scrollto" target="_blank" href="https://discord.com/invite/WuVgUww9">Join Now!</a></li>
+          <li><a class="getstarted scrollto" target="_blank" href="hhttps://discord.gg/TMDrxqhHV5">Join Now!</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -305,7 +305,7 @@
         </div>
         <div class="row justify-content-center">
           <div class="col-lg-3 text-center justify-content-center cta-btn-container">
-            <a class="cta-btn align-middle" target="_blank" href="https://discord.com/invite/WuVgUww9">Join our Discord</a>
+            <a class="cta-btn align-middle" target="_blank" href="https://discord.gg/TMDrxqhHV5">Join our Discord</a>
           </div>
         </div>
         <br>
@@ -530,7 +530,7 @@
 
           <div class="col-lg-3 col-md-6 footer-links"> -->
             <div class="social-links mt-3">
-              <a href="https://discord.com/invite/WuVgUww9" class="discord"><i class="bx bxl-discord bx-sm"></i></a>
+              <a href="https://discord.gg/TMDrxqhHV5" class="discord"><i class="bx bxl-discord bx-sm"></i></a>
               <a href="http://instagram.com/frontierx_lab" class="instagram"><i class="bx bxl-instagram bx-sm"></i></a>
             </div>
           </div>
