--- a/index.html
+++ b/index.html
@@ -71,9 +71,10 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
+          <li><a class="nav-link scrollto" href="#discord">Discord</a></li>
           <!-- <li><a class="nav-link   scrollto" href="#portfolio">Portfolio</a></li> -->
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
-          <li><a class="getstarted scrollto" target="_blank" href="hhttps://discord.gg/TMDrxqhHV5">Join Now!</a></li>
+          <li><a class="getstarted scrollto" target="_blank" href="https://discord.gg/TMDrxqhHV5">Join Now!</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
