--- a/index.html
+++ b/index.html
@@ -89,17 +89,15 @@
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
           <h1>Join our community!</h1>
-          <h2>
-            Join Frontier X today and immerse yourself in a world where originality is celebrated, innovation is the norm, and like-minded peers become your greatest allies. Let's embark on a journey together to redefine what's possible.
-          </h2>
+          <h2>Join Frontier X today and immerse yourself in a world where originality is celebrated, innovation is the norm, and like-minded peers become your greatest allies. Let's embark on a journey together to redefine what's possible.</h2>
           <div class="d-flex justify-content-center justify-content-lg-start">
-            <a href="#about" class="btn-get-started scrollto">Get Started</a>
+            <a href="#discord" class="btn-get-started scrollto">Read more</a>
             <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
           </div>
         </div>
-        <!-- <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200"> -->
+        <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
           <img src="assets/img/hero-img.png" class="img-fluid animated" alt="">
-        <!-- </div> -->
+        </div>
       </div>
     </div>
 
