--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
     </section>End Services Section -->
 
     <!-- ======= Cta Section ======= -->
-    <section id="cta" class="cta">
+    <section id="discord" class="cta">
       <div class="container" data-aos="zoom-in">
         <div class="row justify-content-center">
           <div class="col-lg-9 text-center text-lg-start">
