refactor: add discord useful link
Signed-off-by: Zach Sirotto <zachary.sirotto@merative.com>

--- a/index.html
+++ b/index.html
@@ -521,6 +521,7 @@
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#about">About</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#discord">Discord</a></li>
               <!-- <li><i class="bx bx-chevron-right"></i> <a href="#portfolio">Portfolio</a></li> -->
               <li><i class="bx bx-chevron-right"></i> <a href="#team">Team</a></li>
             </ul>
